WP-8576 fixes for the spacing

--- a/css/style.css
+++ b/css/style.css
@@ -5463,7 +5463,8 @@ ul.gsb-social-buttons li:last-of-type {
   .node-book.view-mode-full .group-wrapper-related legend,
   .node-publication.view-mode-full .group-wrapper-related legend,
   .node-working-paper.view-mode-full .group-wrapper-related legend,
-  .node-case.view-mode-full .group-wrapper-related legend {
+  .node-case.view-mode-full .group-wrapper-related legend,
+  .node-voices.view-mode-full .group-wrapper-related legend {
     display: block;
     float: left;
     font-family: "NewsGothicBT-Demi", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -5482,7 +5483,8 @@ ul.gsb-social-buttons li:last-of-type {
   .node-book.view-mode-full .group-wrapper-related .fieldset-wrapper,
   .node-publication.view-mode-full .group-wrapper-related .fieldset-wrapper,
   .node-working-paper.view-mode-full .group-wrapper-related .fieldset-wrapper,
-  .node-case.view-mode-full .group-wrapper-related .fieldset-wrapper {
+  .node-case.view-mode-full .group-wrapper-related .fieldset-wrapper,
+  .node-voices.view-mode-full .group-wrapper-related .fieldset-wrapper {
     display: block !important;
   }
 }
@@ -5494,7 +5496,8 @@ ul.gsb-social-buttons li:last-of-type {
   .node-book.view-mode-full .group-wrapper-related .fieldset-wrapper,
   .node-publication.view-mode-full .group-wrapper-related .fieldset-wrapper,
   .node-working-paper.view-mode-full .group-wrapper-related .fieldset-wrapper,
-  .node-case.view-mode-full .group-wrapper-related .fieldset-wrapper {
+  .node-case.view-mode-full .group-wrapper-related .fieldset-wrapper,
+  .node-voices.view-mode-full .group-wrapper-related .fieldset-wrapper {
     clear: left;
   }
 }
@@ -5506,7 +5509,8 @@ ul.gsb-social-buttons li:last-of-type {
   .node-book.view-mode-full .group-wrapper-related .superhead,
   .node-publication.view-mode-full .group-wrapper-related .superhead,
   .node-working-paper.view-mode-full .group-wrapper-related .superhead,
-  .node-case.view-mode-full .group-wrapper-related .superhead {
+  .node-case.view-mode-full .group-wrapper-related .superhead,
+  .node-voices.view-mode-full .group-wrapper-related .superhead {
     display: none;
   }
 }
@@ -5518,7 +5522,8 @@ ul.gsb-social-buttons li:last-of-type {
   .node-book.view-mode-full .group-wrapper-related .field-name-field-person-fac-ref,
   .node-publication.view-mode-full .group-wrapper-related .field-name-field-person-fac-ref,
   .node-working-paper.view-mode-full .group-wrapper-related .field-name-field-person-fac-ref,
-  .node-case.view-mode-full .group-wrapper-related .field-name-field-person-fac-ref {
+  .node-case.view-mode-full .group-wrapper-related .field-name-field-person-fac-ref,
+  .node-voices.view-mode-full .group-wrapper-related .field-name-field-person-fac-ref {
     padding: 0 26px 20px;
   }
 }
@@ -5530,7 +5535,8 @@ ul.gsb-social-buttons li:last-of-type {
   .node-book.view-mode-full .group-wrapper-related .field-name-field-related-idea-story .node-idea-story,
   .node-publication.view-mode-full .group-wrapper-related .field-name-field-related-idea-story .node-idea-story,
   .node-working-paper.view-mode-full .group-wrapper-related .field-name-field-related-idea-story .node-idea-story,
-  .node-case.view-mode-full .group-wrapper-related .field-name-field-related-idea-story .node-idea-story {
+  .node-case.view-mode-full .group-wrapper-related .field-name-field-related-idea-story .node-idea-story,
+  .node-voices.view-mode-full .group-wrapper-related .field-name-field-related-idea-story .node-idea-story {
     padding: 20px 26px;
   }
 }
@@ -5542,7 +5548,8 @@ ul.gsb-social-buttons li:last-of-type {
   .node-book.view-mode-full .group-wrapper-related .field-collection-item-field-related-other-unlimited,
   .node-publication.view-mode-full .group-wrapper-related .field-collection-item-field-related-other-unlimited,
   .node-working-paper.view-mode-full .group-wrapper-related .field-collection-item-field-related-other-unlimited,
-  .node-case.view-mode-full .group-wrapper-related .field-collection-item-field-related-other-unlimited {
+  .node-case.view-mode-full .group-wrapper-related .field-collection-item-field-related-other-unlimited,
+  .node-voices.view-mode-full .group-wrapper-related .field-collection-item-field-related-other-unlimited {
     padding: 20px 26px;
   }
 }
@@ -5554,7 +5561,8 @@ ul.gsb-social-buttons li:last-of-type {
   .node-book.view-mode-full .group-wrapper-related .field-name-field-link-unlimited,
   .node-publication.view-mode-full .group-wrapper-related .field-name-field-link-unlimited,
   .node-working-paper.view-mode-full .group-wrapper-related .field-name-field-link-unlimited,
-  .node-case.view-mode-full .group-wrapper-related .field-name-field-link-unlimited {
+  .node-case.view-mode-full .group-wrapper-related .field-name-field-link-unlimited,
+  .node-voices.view-mode-full .group-wrapper-related .field-name-field-link-unlimited {
     padding: 20px 26px;
   }
 }
