--- a/sass/conditionals/voices-detail.sass
+++ b/sass/conditionals/voices-detail.sass
@@ -552,11 +552,14 @@
             border-bottom: 1px solid lightgray
             padding-bottom: 10px
           .field-name-field-link-unlimited
-            padding-top: 15px
-            padding-bottom: 15px
+            .field-name-field-link-unlimited
+              padding: 0 0 0 5px
             div
               margin-bottom: 0px
           .field-name-field-link-unlimited:last-child
             border-bottom: none !important
             padding-bottom: 10px !important
+          .field-name-field-person-ref-unlimited
+            div.ds-1col:last-of-type
+              padding-bottom: 18px
 
