--- a/sass/partials/design/_design.sass
+++ b/sass/partials/design/_design.sass
@@ -647,7 +647,8 @@ ul.gsb-social-buttons li
 .node-book.view-mode-full,
 .node-publication.view-mode-full,
 .node-working-paper.view-mode-full,
-.node-case.view-mode-full
+.node-case.view-mode-full,
+.node-voices.view-mode-full
   .group-wrapper-related
 
     // Toggle open and closed
